--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
           <a href="https://protosaur.dev/dawg/" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img src="./src/assets/dawg.svg" class="h-12" alt="Data Access Workgroups Logo">
-            <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">Data Access Workgroups</span>
+            <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">Data Access <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-orange-400">Workgroups</span></span>
           </a>
           <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse items-center">
             <button id="theme-toggle" type="button" class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
