e2e tests pass w/ mockdata

--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
   </head>
   <body id="app" class="antialiased text-slate-500 dark:text-slate-400 bg-white dark:bg-slate-900">
     <script type="module" src="/src/main.ts"></script>
+    <h1>JavaScript is required</h1>
+    <p>If you believe you have seen this message in error please contact @mducharme on slack</p>
   </body>
 </html>
